Update copy of Commons Pool to 1.6.x to add generics